# VINS_Stereo

./: CMakeLists.txt  README.md  package.xml
include/backend/: edge.h  edge_reprojection.h  eigen_types.h  problem.h  vertex.h  vertex_pose.h
include/feature_tracker/: feature_tracker.h  img_feature_tracker.h
launch/: test.launch
src/: parameters.cpp  parameters.h  test_node.cpp  vins_node.cpp
src/backend/: edge.cpp  edge_reprojection.cpp  loss_functions.cpp  loss_functions.h  problem.cpp  vertex.cpp  vertex_inverse_depth.cpp  vertex_inverse_depth.h  vertex_pose.cpp
src/feature_tracker/: feature_tracker.cpp  feature_tracker.h  img_feature_tracker.cpp
